--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
 	<script src="js/app.js"></script>
 
 	<script type="text/javascript" src="js/library/hammer.min.js"></script>
+	<script type="text/javascript" src="js/library/angular.hammer.js"></script>
 	<script type="text/javascript" src="js/library/jquery.min.js"></script>
 	<script type="text/javascript" src="js/library/jquery.hammer.js"></script>
 </head>
