set up the ui router

--- a/index.html
+++ b/index.html
@@ -21,6 +21,6 @@
 	<script type="text/javascript" src="js/library/jquery.hammer.js"></script>
 </head>
 <body>	
-	<div ui-view class="container"></div>
+	<div ui-view class="container" ng-controller="MainController"></div>
 </body>
 </html>
