--- a/index.html
+++ b/index.html
@@ -5,20 +5,26 @@
 	<title>Document</title>
 
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=1">
+    <meta name="apple-mobile-web-app-capable" content="yes">
 
 	<link href='http://fonts.googleapis.com/css?family=Lato:100,300,400,700,900,100italic,300italic,400italic,700italic,900italic' rel='stylesheet' type='text/css'>
 	<link rel="stylesheet" href="css/style.css">
+
+    <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyASm3CwaK9qtcZEWYa-iQwHaGi3gcosAJc&sensor=false"></script>
 
 	<script src="js/library/angular.js"></script>
 	<script src="js/library/angular-ui-router.min.js"></script>
     <!--<script src="//ajax.googleapis.com/ajax/libs/angularjs/1.2.16/angular-animate.min.js"></script>
     <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.2.16/angular-touch.min.js"></script>-->
-	<script src="js/app.js"></script>
-
 	<script type="text/javascript" src="js/library/hammer.min.js"></script>
 	<script type="text/javascript" src="js/library/angular.hammer.js"></script>
 	<script type="text/javascript" src="js/library/jquery.min.js"></script>
 	<script type="text/javascript" src="js/library/jquery.hammer.js"></script>
+
+	<script type="text/javascript" src="js/services/nearbyMapService.js"></script>
+	<script type="text/javascript" src="js/controllers/nearbyController.js"></script>
+
+	<script src="js/app.js"></script>
 </head>
 <body>	
 	<div ui-view class="container" ng-controller="MainController"></div>
