--- a/index.html
+++ b/index.html
@@ -8,10 +8,11 @@
     <meta name="apple-mobile-web-app-capable" content="yes">
 
 	<link href='http://fonts.googleapis.com/css?family=Lato:100,300,400,700,900,100italic,300italic,400italic,700italic,900italic' rel='stylesheet' type='text/css'>
+    <link href='http://fonts.googleapis.com/css?family=Open+Sans+Condensed:300,700,300italic' rel='stylesheet' type='text/css'>
 	<link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/idangerous.swiper.css">
 
     <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyASm3CwaK9qtcZEWYa-iQwHaGi3gcosAJc&sensor=false"></script>
-
 	<script src="js/library/angular.js"></script>
 	<script src="js/library/angular-ui-router.min.js"></script>
     <!--<script src="//ajax.googleapis.com/ajax/libs/angularjs/1.2.16/angular-animate.min.js"></script>
@@ -20,10 +21,11 @@
 	<script type="text/javascript" src="js/library/angular.hammer.js"></script>
 	<script type="text/javascript" src="js/library/jquery.min.js"></script>
 	<script type="text/javascript" src="js/library/jquery.hammer.js"></script>
+    
+    <script type="text/javascript" src="js/library/idangerous.swiper-2.0.min.js"></script>
 
 	<script type="text/javascript" src="js/services/nearbyMapService.js"></script>
 	<script type="text/javascript" src="js/controllers/nearbyController.js"></script>
-
 	<script src="js/app.js"></script>
 </head>
 <body>	
